--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -45,4 +45,9 @@
   margin-top: -3px;
 }
 
+.select-container {
+  margin-left: auto;
+  margin-right: 2rem;
+}
+
 /*# sourceMappingURL=Navbar.css.map */
