--- a/src/ColorBox.css
+++ b/src/ColorBox.css
@@ -10,8 +10,14 @@
   opacity: 1;
   transition: 0.5s;
 }
+.SingleColorPalette .ColorBox {
+  height: 50%;
+}
+.ColorBox.go-back {
+  background-color: black;
+}
 
-.copy-button {
+.copy-button, .back-button {
   width: 100px;
   height: 30px;
   position: absolute;
@@ -27,7 +33,11 @@
   line-height: 30px;
   color: white;
   text-transform: uppercase;
+  text-decoration: none;
   border: none;
+}
+
+.copy-button {
   opacity: 0;
 }
 
