--- a/src/ColorBox.sass
+++ b/src/ColorBox.sass
@@ -10,7 +10,13 @@
     opacity: 1
     transition: 0.5s
 
-.copy-button
+  .SingleColorPalette &
+    height: 50%
+
+  &.go-back
+    background-color: black
+
+.copy-button, .back-button
   width: 100px
   height: 30px
   position: absolute
@@ -26,7 +32,11 @@
   line-height: 30px
   color: white
   text-transform: uppercase
+  text-decoration: none
   border: none
+
+
+.copy-button
   opacity: 0
 
 .box-content
