--- a/src/ColorBox.sass
+++ b/src/ColorBox.sass
@@ -35,7 +35,6 @@
   text-decoration: none
   border: none
 
-
 .copy-button
   opacity: 0
 
@@ -49,6 +48,12 @@
   letter-spacing: 1px
   text-transform: uppercase
   font-size: 12px
+
+.light-text
+  color: white
+
+.ColorBox .dark-text
+  color: rgba(0,0,0,0.5)
 
 .see-more
   background-color: rgba(255, 255, 255, 0.3)
