--- a/src/ColorBox.sass
+++ b/src/ColorBox.sass
@@ -6,12 +6,12 @@
   cursor: pointer
   margin: 0 auto -3.5px
 
-  &:hover .copy-button
-    opacity: 1
-    transition: 0.5s
+  //&:hover .copy-button
+  //  opacity: 1
+  //  transition: 0.5s
 
-  .SingleColorPalette &
-    height: 50%
+  //.SingleColorPalette &
+  //  height: 50%
 
   &.go-back
     background-color: black
@@ -35,67 +35,67 @@
   text-decoration: none
   border: none
 
-.copy-button
-  opacity: 0
+//.copy-button
+//  opacity: 0
 
-.box-content
-  position: absolute
-  width: 100%
-  left: 0
-  bottom: 0
-  padding: 10px
-  color: black
-  letter-spacing: 1px
-  text-transform: uppercase
-  font-size: 12px
+//.box-content
+//  position: absolute
+//  width: 100%
+//  left: 0
+//  bottom: 0
+//  padding: 10px
+//  color: black
+//  letter-spacing: 1px
+//  text-transform: uppercase
+//  font-size: 12px
 
-.light-text
-  color: white
+//.light-text
+//  color: white
+//
+//.ColorBox .dark-text
+//  color: rgba(0,0,0,0.5)
+//
+//.see-more
+//  background-color: rgba(255, 255, 255, 0.3)
+//  position: absolute
+//  border: none
+//  right: 0
+//  bottom: 0
+//  color: white
+//  width: 60px
+//  height: 30px
+//  text-align: center
+//  line-height: 30px
 
-.ColorBox .dark-text
-  color: rgba(0,0,0,0.5)
-
-.see-more
-  background-color: rgba(255, 255, 255, 0.3)
-  position: absolute
-  border: none
-  right: 0
-  bottom: 0
-  color: white
-  width: 60px
-  height: 30px
-  text-align: center
-  line-height: 30px
-
-.copy-overlay
-  opacity: 0
-  z-index: 0
-  width: 100%
-  height: 100%
-  transition: transform 0.6s ease-in-out
-  transform: scale(0.1)
-
-  &.show
-    opacity: 1
-    transform: scale(50)
-    z-index: 10
-    position: absolute
+//.copy-overlay
+//  opacity: 0
+//  z-index: 0
+//  width: 100%
+//  height: 100%
+//  transition: transform 0.6s ease-in-out
+//  transform: scale(0.1)
+//
+//  &.show
+//    opacity: 1
+//    transform: scale(50)
+//    z-index: 10
+//    position: absolute
 
 
-.copy-message
-  position: fixed
-  top: 0
-  bottom: 0
-  left: 0
-  right: 0
-  display: flex
-  flex-direction: column
-  align-items: center
-  justify-content: center
-  font-size: 4rem
-  transform: scale(0.1)
-  opacity: 0
-  color: white
+//.copy-message
+//  position: fixed
+//  top: 0
+//  bottom: 0
+//  left: 0
+//  right: 0
+//  display: flex
+//  flex-direction: column
+//  align-items: center
+//  justify-content: center
+//  font-size: 4rem
+//  transform: scale(0.1)
+//  opacity: 0
+//  color: white
 
   &.show
     opacity: 1
@@ -104,16 +104,16 @@
     transition: all 0.4s ease-in-out
     transition-delay: 0.3s
 
-  h1
-    font-weight: 400
-    text-shadow: 1px 2px black
-    background-color: rgba(255, 255, 255, 0.2)
-    width: 100%
-    text-align: center
-    margin-bottom: 0
-    padding: 1rem
-    text-transform: uppercase
-
-  p
-    font-size: 2rem
-    font-weight: 100
+  //h1
+  //  font-weight: 400
+  //  text-shadow: 1px 2px black
+  //  background-color: rgba(255, 255, 255, 0.2)
+  //  width: 100%
+  //  text-align: center
+  //  margin-bottom: 0
+  //  padding: 1rem
+  //  text-transform: uppercase
+  //
+  //p
+  //  font-size: 2rem
+  //  font-weight: 100
